# wlroots

./: meson.options
backend/: backend.c
backend/termux/: backend.c  input.c  meson.build  output.c  termux_render.c  termux_render.h
docs/: env_vars.md
include/backend/: termux.h
include/wlr/backend/: termux.h
protocol/: meson.build
tinywl/: meson.build
util/: shm.c
